<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/mod_hr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:ellipsize="none"
        android:ems="10"
        android:enabled="false"
        android:gravity="center_vertical"
        android:inputType="number|numberDecimal"
        android:lines="1"
        android:scaleY="2"
        android:selectAllOnFocus="true"
        android:tag="heartRate"
        android:text="@string/heart_rate_input_label"
        android:textAlignment="center"
        android:textColor="?hrColor"
        android:textScaleX="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mod_dias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:ellipsize="none"
        android:ems="10"
        android:enabled="false"
        android:gravity="center_vertical"
        android:inputType="number|numberDecimal"
        android:lines="1"
        android:scaleY="2"
        android:selectAllOnFocus="true"
        android:tag="diastolic"
        android:text="@string/diastolic_input_label"
        android:textAlignment="center"
        android:textColor="?diasColor"
        android:textScaleX="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mod_sys"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:ellipsize="none"
        android:ems="10"
        android:enabled="false"
        android:gravity="center_vertical"
        android:inputType="number|numberDecimal"
        android:lines="1"
        android:scaleY="2"
        android:selectAllOnFocus="true"
        android:tag="systolic"
        android:text="@string/systolic_input_label"
        android:textAlignment="center"
        android:textColor="?sysColor"
        android:textScaleX="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/mod_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="?attr/defaultFontColor"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:enabled="false"
        android:lines="1"
        android:tag="date"
        android:textOn="@string/picker_confirm_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/mod_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="?attr/defaultFontColor"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:enabled="false"
        android:lines="1"
        android:tag="time"
        android:textOn="@string/picker_confirm_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <ToggleButton
        android:id="@+id/mod_remove"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="remove"
        android:textOff="@string/remove_label"
        android:textOn="@string/remove_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <ToggleButton
        android:id="@+id/mod_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="submit"
        android:text="@string/start_edit_label"
        android:textOff="@string/start_edit_label"
        android:textOn="@string/submit_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mode_remove_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:enabled="false"
        android:lines="1"
        android:tag="confirmRemove"
        android:text="@string/remove_confirm"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>