<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.export.ExportFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/exportDestEntry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/field_background"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="3sp"
        android:autoSizeTextType="none"
        android:gravity="center"
        android:lines="1"
        android:selectAllOnFocus="true"
        android:text="@string/default_dest"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <Button
        android:id="@+id/exportSubmit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="3sp"
        android:autoSizeTextType="uniform"
        android:lines="1"
        android:text="@string/export_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <Button
        android:id="@+id/exportImport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="3sp"
        android:autoSizeTextType="uniform"
        android:lines="1"
        android:text="@string/import_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="right|center_vertical"
        android:lines="1"
        android:text="@string/file_dest_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/importDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?backgroundColor"
        android:clickable="true"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="3sp"
            android:autoSizeTextType="uniform"
            android:elevation="2dp"
            android:text="@string/import_warning"
            app:layout_constraintBottom_toTopOf="@+id/guideline28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/importValidate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/field_background"
            android:elevation="2dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline28" />

        <Button
            android:id="@+id/confirmImport"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="3sp"
            android:autoSizeTextType="uniform"
            android:elevation="2dp"
            android:text="@string/import_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline30"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <Button
            android:id="@+id/cancelImport"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="3sp"
            android:autoSizeTextType="uniform"
            android:elevation="2dp"
            android:text="@string/import_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>