<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/field_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" >

        <EditText
            android:id="@+id/add_hr"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:autoText="true"
            android:background="@drawable/edit_field_background"
            android:ellipsize="none"
            android:gravity="center"
            android:hint="@string/heart_rate_input_label"
            android:inputType="number|numberDecimal"
            android:maxLines="2"
            android:paddingVertical="0dp"
            android:scaleY="2"
            android:selectAllOnFocus="true"
            android:tag="heartRate"
            android:textColor="?hrColor"
            android:textColorHint="?attr/hrHintColor"
            android:textScaleX="2"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/field_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" >

        <EditText
            android:id="@+id/add_dias"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:autoText="true"
            android:background="@drawable/edit_field_background"
            android:ellipsize="none"
            android:gravity="center"
            android:hint="@string/diastolic_input_label"
            android:inputType="number|numberDecimal"
            android:maxLines="2"
            android:paddingVertical="0dp"
            android:scaleY="2"
            android:selectAllOnFocus="true"
            android:tag="diastolic"
            android:textColor="?diasColor"
            android:textColorHint="?attr/diasHintColor"
            android:textScaleX="2"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/field_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_sys"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:autoText="true"
            android:background="@drawable/edit_field_background"
            android:ellipsize="none"
            android:gravity="center"
            android:hint="@string/systolic_input_label"
            android:inputType="number|numberDecimal"
            android:maxLines="2"
            android:paddingVertical="0dp"
            android:scaleY="2"
            android:selectAllOnFocus="true"
            android:tag="systolic"
            android:textColor="?sysColor"
            android:textColorHint="?attr/sysHintColor"
            android:textScaleX="2" />
    </FrameLayout>

    <Button
        android:id="@+id/add_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin = "2dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:background="@drawable/toggle_background"
        android:elevation="1dp"
        android:lines="1"
        android:tag="submit"
        android:text="@string/submit_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.51" />

    <ToggleButton
        android:id="@+id/add_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/checked_field_background"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:elevation="1dp"
        android:lines="1"
        android:tag="date"
        android:textColor="?attr/defaultFontColor"
        android:textOn="@string/picker_confirm_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ToggleButton
        android:id="@+id/add_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/checked_field_background"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:elevation="1dp"
        android:lines="1"
        android:tag="time"
        android:textColor="?attr/defaultFontColor"
        android:textOn="@string/picker_confirm_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.667" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>